--- a/style.css
+++ b/style.css
@@ -1,24 +1,6 @@
-
-body {
-    margin: 0;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    text-align: center;
-}
-
-.container{
-    max-width: 960px;
+.center{
+    display: block;
     margin-left: auto;
     margin-right: auto;
-    padding-left: 1rem;
-    padding-right: 1rem;
-}
-.hero { 
-    background-color: #074f57;
-    background-image: url("img_6107_2.jpg");
-    padding-top: 200px;
-    padding-bottom: 200px;
-    background-repeat: repeat;
-    background-size: contain;
-    background-position: center;
-    color:yellow;
+    width: 50%;
 }
